# freeserf

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  configure.ac
.github/workflows/: linux.yml
cmake/: FindSDL2_ttf.cmake
proto/: CMakeLists.txt  mission.proto  random.proto
src/: CMakeLists.txt  application.cc  application.h  audio-dummy.cc  audio-sdlmixer.c  audio-sdlmixer.cc  audio-sdlmixer.h  audio.cc  audio.h  building.cc  config.cc  config.h  data-source-dos.c  data-source-dos.cc  data.cc  data.h  dialog-build.cc  dialog-build.h  dialog-building.cc  dialog-building.h  dialog-demolish-confirm.cc  dialog-demolish-confirm.h  dialog-ground-analysis.cc  dialog-ground-analysis.h  dialog-map.cc  dialog-map.h  dialog-quit-confirm.cc  dialog-quit-confirm.h  dialog.cc  dialog.h  event_loop-net.cc  event_loop-net.h  event_loop-sdl.cc  event_loop-sdl.h  event_loop.cc  event_loop.h  flag.cc  flag.h  freeserf.cc  freeserf.h  (+66 more)
windows/: audio-win.cc  audio-win.h  config.h  event_loop-win.cc  event_loop-win.h  freeserf.vcproj  getopt-win.cc  getopt-win.h  sprite-file-win.cc  video-win.cc  video-win.h
